Set tokens in cookie instead of headers.